--- a/GoEuroDev/pom.xml
+++ b/GoEuroDev/pom.xml
@@ -21,6 +21,12 @@
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.4.0.v20161208</version>
+        </dependency>
     </dependencies>
 
 
